log
Fri May  1 02:19:04 AM UTC 2026: 
 tests:  1|8
total_score: 0/60
97d7ae6
Fri May  1 02:37:58 AM UTC 2026: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:38:16: error: ‘dddddddddddddddddddd’ undeclared (first use in this function)
   38 |     return new;dddddddddddddddddddd
      |                ^~~~~~~~~~~~~~~~~~~~
treemap.c:38:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:38:36: error: expected ‘;’ before ‘}’ token
   38 |     return new;dddddddddddddddddddd
      |                                    ^
      |                                    ;
   39 | }
      | ~                                   
1a4923c
Fri May  1 02:38:16 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeNode’:
treemap.c:38:16: error: ‘dddddddddddddddddddd’ undeclared (first use in this function)
   38 |     return new;dddddddddddddddddddd
      |                ^~~~~~~~~~~~~~~~~~~~
treemap.c:38:16: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:38:36: error: expected ‘;’ before ‘}’ token
   38 |     return new;dddddddddddddddddddd
      |                                    ^
      |                                    ;
   39 | }
      | ~                                   
eac5211
Fri May  1 02:39:34 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
c2db6db
Fri May  1 02:49:25 AM UTC 2026: 
 treemap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/60
b51c457
Fri May  1 02:54:11 AM UTC 2026: 
 treemap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/60
f251255
Fri May  1 02:57:18 AM UTC 2026: 
 treemap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  11|6
total_score: 15/60
9501024
Fri May  1 02:57:43 AM UTC 2026: 
 tests:  11|6
total_score: 15/60
0746788
